testsuite/bsc.evaluator/dynamic/errors/ERulesMux3_Case.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling ERulesMux3_Case.bsv
code generation for sysERulesMux3_Case starts
Error: "ERulesMux3_Case.bsv", line 27, column 4: (G0069)
  The expression for a rule or rules could not be evaluated. Rules must be
  determined at compile time and cannot be computed dynamically.
  During elaboration of `sysERulesMux3_Case' at "ERulesMux3_Case.bsv", line 2,
  column 8.
